--- a/.github/workflows/docker-image-arm.yml
+++ b/.github/workflows/docker-image-arm.yml
@@ -8,7 +8,7 @@ jobs:
 
   build_push_image:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v3
@@ -24,15 +24,15 @@ jobs:
 
     - name: Build and push the Docker image latest
       run: |
-        docker build . --file Dockerfile --tag neytor/samba-arm &&
+        docker build . --file Dockerfile --tag neytor/samba:arm &&
         docker image ls &&
-        docker push neytor/samba-arm
+        docker push neytor/samba:arm
     
     - name: Build and push the Docker image with tag
       run: |
-        docker build . --file Dockerfile --tag neytor/samba-arm:v1 &&
+        docker build . --file Dockerfile --tag neytor/samba:arm.v1 &&
         docker image ls &&
-        docker push neytor/samba-arm:v1
+        docker push neytor/samba:arm.v1
       
       
     
