--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "master", "main" ]
   pull_request:
     branches: [ "master", "main" ]
+  workflow_dispatch: # Agrega esta entrada para habilitar la ejecución manual
+    branches: [ "master", "main" ] # Opcional: restringe las ramas donde se puede ejecutar
 
 jobs:
 
