--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,8 +33,8 @@ jobs:
 
     - name: Build and push the Docker image with tag
       run: |
-        docker build . --file Dockerfile --tag neytor/samba:v1 && \
-        docker image ls && docker push neytor/samba:v1
+        docker build . --file Dockerfile --tag neytor/samba:v4-19-6 && \
+        docker image ls && docker push neytor/samba:v4-19-6
       
     
 
